# SkiROS2_skill_learning_demo

./: CMakeLists.txt  Dockerfile  README.md  package.xml  setup.py
.github/workflows/: docker-build.yml
config/: control.yaml  peg_learning.json  robot.rviz
launch/: main.launch  robot.launch  skiros.launch
owl/: iiwa_robot_description.owl
owl/scenes/: simulation.turtle
res/urdf/: box_with_hole.urdf  iiwa7_with_peg.urdf.xacro
scripts/: installation.sh  startup_tmux.sh  unpause_gazebo.sh
src/: learning.py
src/skiros2_skill_learning_demo/: compound_skills.py  primitive_skills.py
