<?xml version="1.0"?>
<package format="2">
  <name>skiros2_skill_learning_demo</name>
  <version>0.0.1</version>
  <description>The SkiROS2_skill_learning_demo package</description>

  <maintainer email="matthias.mayr@cs.lth.se">Matthias Mayr</maintainer>

  <license>GPLv3</license>

  <author email="matthias.mayr@cs.lth.se">Matthias Mayr</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>skiros2_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>skiros2_msgs</exec_depend>
  <exec_depend>skiros2_common</exec_depend>
  <exec_depend>skiros2_skill</exec_depend>
</package>
